liên kết vs google sheet

--- a/template.html
+++ b/template.html
@@ -2118,13 +2118,7 @@
   <div class="toast" id="toast"></div>
 
   <script>
-    const CFG = {
-      SHEET_ID: '1F-Fcu0Aoj8tvyedmF7yDohLSqJbRNCeftpQhr3_Lifo',
-      ZALO: '0901112586',
-      SCRIPT: 'https://script.google.com/macros/s/AKfycbxXvpNPgyySE9l4c6ikrYBPgXNsWfwuDevg5rGkID_xfZvt-kfdR3-Ts6eWCI_30Eb0/exec',
-      PER: 12,
-      TTL: 5 * 60 * 1000
-    };
+    const CFG = { SHEET_ID: 'YOUR_SHEET_ID', ZALO: '84901234567', SCRIPT: 'YOUR_APPS_SCRIPT_URL', PER: 12, TTL: 5 * 60 * 1000 };
 
     // ── DEMO DATA ─────────────────────────────────────────────
     const DC = [{ id: 'binh', name: 'Bình sữa', icon: '🍼' }, { id: 'num', name: 'Núm ti', icon: '🤱' }, { id: 'do-choi', name: 'Đồ chơi', icon: '🧸' }, { id: 'quan-ao', name: 'Quần áo', icon: '👕' }, { id: 'goi-chan', name: 'Gối chăn', icon: '🛏️' }, { id: 'tam', name: 'Tắm bé', icon: '🛁' }, { id: 'an-dam', name: 'Ăn dặm', icon: '🥣' }, { id: 'phu-kien', name: 'Phụ kiện', icon: '✨' }];
