--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tovi & Molly Việt Nam</title>
-  <meta name="description" content="Tovi & Molly Việt Nam - Sản phẩm chất lượng cao cho bé yêu">
+  <title>Tovi And Molly Việt Nam</title>
+  <meta name="description" content="Tovi And Molly Việt Nam - Sản phẩm chất lượng cao cho bé yêu">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -1870,7 +1870,7 @@
       <div class="logo" onclick="showHome()">
         <div class="logo-mark">🐾</div>
         <div>
-          <div class="logo-name">Tovi & Molly</div>
+          <div class="logo-name">Tovi And Molly</div>
           <div class="logo-sub">Việt Nam</div>
         </div>
       </div>
@@ -1973,7 +1973,7 @@
     <footer>
       <div class="fgrid">
         <div class="fbn">
-          <div class="fln">Tovi & Molly</div>
+          <div class="fln">Tovi And Molly</div>
           <p>Sản phẩm chất lượng cao dành cho bé yêu. An toàn, đáng tin cậy.</p>
           <div class="fso"><a class="fsb" href="#">f</a><a class="fsb" href="#">ig</a><a class="fsb" href="#">Z</a><a
               class="fsb" href="#">tt</a></div>
@@ -1999,14 +1999,14 @@
         <div class="fcol">
           <h4>Liên hệ</h4>
           <ul>
-            <li><a href="tel:0901234567">0901 234 567</a></li>
-            <li><a href="#">hello@toviandmolly.vn</a></li>
-            <li><a href="#">TP. Hồ Chí Minh</a></li>
+            <li><a href="tel:0901112586">0901 112 586</a></li>
+            <li><a href="#">Daithinh.toviandmolly@gmail.com</a></li>
+            <li><a href="#">TP. Hà Nội</a></li>
             <li><a href="#">8:00 – 22:00 mỗi ngày</a></li>
           </ul>
         </div>
       </div>
-      <div class="fbot"><span>© 2025 Tovi & Molly Việt Nam</span><span>Made with ♡ for bé yêu</span></div>
+      <div class="fbot"><span>© 2025 Tovi And Molly Việt Nam</span><span>Made with ♡ for bé yêu</span></div>
     </footer>
   </div>
 
@@ -2103,7 +2103,7 @@
           <div class="fg"><label class="fl">Họ và tên <span>*</span></label><input class="fi" id="fn"
               placeholder="Nguyễn Văn A" required></div>
           <div class="fg"><label class="fl">Số điện thoại <span>*</span></label><input class="fi" id="fp" type="tel"
-              placeholder="0901 234 567" required pattern="[0-9+\s\-]{9,15}"></div>
+              placeholder="0901 112 586" required pattern="[0-9+\s\-]{9,15}"></div>
           <div class="fg"><label class="fl">Địa chỉ giao hàng <span>*</span></label><textarea class="fi" id="fa"
               placeholder="Số nhà, đường, phường/xã, quận/huyện, tỉnh/thành" required></textarea></div>
           <div class="fg"><label class="fl">Ghi chú</label><input class="fi" id="fnt" placeholder="Không bắt buộc">
@@ -2128,7 +2128,7 @@
 
     // ── DEMO DATA ─────────────────────────────────────────────
     const DC = [{ id: 'binh', name: 'Bình sữa', icon: '🍼' }, { id: 'num', name: 'Núm ti', icon: '🤱' }, { id: 'do-choi', name: 'Đồ chơi', icon: '🧸' }, { id: 'quan-ao', name: 'Quần áo', icon: '👕' }, { id: 'goi-chan', name: 'Gối chăn', icon: '🛏️' }, { id: 'tam', name: 'Tắm bé', icon: '🛁' }, { id: 'an-dam', name: 'Ăn dặm', icon: '🥣' }, { id: 'phu-kien', name: 'Phụ kiện', icon: '✨' }];
-    const DB = [{ tag: 'Bộ sưu tập mới', title: 'Yêu thương bé\ntừng khoảnh khắc', description: 'Đồ dùng cho bé chất lượng cao, an toàn từ Tovi & Molly.', btn_text: 'Khám phá →', bg_color: '#f7f4f0', deco: '🐾' }, { tag: 'Khuyến mãi', title: 'Giảm đến 50%\nsản phẩm chọn lọc', description: 'Ưu đãi đặc biệt dành cho đơn hàng đầu tiên.', btn_text: 'Mua ngay →', bg_color: '#f0f4f7', deco: '✦' }, { tag: 'Combo tiết kiệm', title: 'Mua combo\nnhận quà kèm', description: 'Tiết kiệm hơn với các bộ combo thiết kế riêng.', btn_text: 'Xem combo →', bg_color: '#f4f7f0', deco: '◇' }];
+    const DB = [{ tag: 'Bộ sưu tập mới', title: 'Yêu thương bé\ntừng khoảnh khắc', description: 'Đồ dùng cho bé chất lượng cao, an toàn từ Tovi And Molly.', btn_text: 'Khám phá →', bg_color: '#f7f4f0', deco: '🐾' }, { tag: 'Khuyến mãi', title: 'Giảm đến 50%\nsản phẩm chọn lọc', description: 'Ưu đãi đặc biệt dành cho đơn hàng đầu tiên.', btn_text: 'Mua ngay →', bg_color: '#f0f4f7', deco: '✦' }, { tag: 'Combo tiết kiệm', title: 'Mua combo\nnhận quà kèm', description: 'Tiết kiệm hơn với các bộ combo thiết kế riêng.', btn_text: 'Xem combo →', bg_color: '#f4f7f0', deco: '◇' }];
     const DP = [
       { id: 'SP001', name: 'Bình sữa PPSU cao cấp 240ml', cat: 'binh', price: 285000, orig: 380000, img: '', badge: 'sale', brand: 'Tovi', stock: true, isnew: false, ishot: true, ico: '🍼', description: 'Bình sữa PPSU cao cấp, chịu nhiệt tốt, không chứa BPA.\nThiết kế cổ rộng dễ vệ sinh.\nPhù hợp cho bé từ 0–18 tháng.', variants: 'Màu sắc\nXanh mint, Hồng pastel, Trắng\nDung tích\n150ml, 240ml', specs: 'Chất liệu: PPSU cao cấp\nDung tích: 240ml\nXuất xứ: Hàn Quốc\nĐộ tuổi: 0–18 tháng\nBảo hành: 12 tháng' },
       { id: 'SP002', name: 'Bộ núm ti silicone mềm S/M/L', cat: 'num', price: 125000, orig: 0, img: '', badge: 'new', brand: 'Molly', stock: true, isnew: true, ishot: false, ico: '🤱', description: 'Núm ti silicone siêu mềm, an toàn cho bé.\nBộ gồm 3 size: S, M, L.', variants: 'Size\nS (0-3 tháng), M (3-6 tháng), L (6+ tháng)', specs: 'Chất liệu: Silicone y tế\nBộ gồm: 3 núm ti\nXuất xứ: Việt Nam\nBảo hành: 6 tháng' },
@@ -2373,7 +2373,7 @@
       e.preventDefault();
       const name = document.getElementById('fn').value.trim(), phone = document.getElementById('fp').value.trim(), addr = document.getElementById('fa').value.trim(), note = document.getElementById('fnt').value.trim();
       const lines = S.cart.map(i => `• ${i.ico} ${i.name}${i.variant ? ' (' + i.variant + ')' : ''} ×${i.qty} = ${fmt(i.price * i.qty)}`).join('\n');
-      const msg = `🛒 ĐẶT HÀNG - TOVI & MOLLY\n\n👤 ${name}\n📞 ${phone}\n📍 ${addr}\n\n${lines}\n\n💰 Tổng: ${fmt(ct())}` + (note ? `\n📝 ${note}` : '');
+      const msg = `🛒 ĐẶT HÀNG - Tovi And Molly\n\n👤 ${name}\n📞 ${phone}\n📍 ${addr}\n\n${lines}\n\n💰 Tổng: ${fmt(ct())}` + (note ? `\n📝 ${note}` : '');
       if (CFG.SCRIPT !== 'YOUR_APPS_SCRIPT_URL') fetch(CFG.SCRIPT, { method: 'POST', mode: 'no-cors', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ action: 'save_order', payload: { name, phone, address: addr, note, items: S.cart, total: ct() } }) }).catch(() => { });
       window.open(`https://zalo.me/${CFG.ZALO}?text=${encodeURIComponent(msg)}`, '_blank');
       S.cart = []; saveCart(); closeCheckout(); toast('🎉 Đặt hàng thành công!');
